added: create users and message api
